ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.3.2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Environment:
      Failing on buildslave/Linux_64bit_debug_dur_off
    • Linux
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      http://buildlogs.mongodb.org/Linux%2064-bit%20debug%20dur%20off/builds/2032/test/recent%20failures/test

      Sat Dec 22 08:08:26.675 [testsuite] Unable to check for journal files due to: boost::filesystem::directory_iterator::construct: No such file or directory: "/tmp/unittest/journal"
      Sat Dec 22 08:08:26.729 [testsuite] git version: d251b6d4784928e747497b6210eb586307269106
      Sat Dec 22 08:08:26.729 [testsuite] build info: Linux tp1.10gen.cc 2.6.31-14-server #48-Ubuntu SMP Fri Oct 16 15:07:34 UTC 2009 x86_64 BOOST_LIB_VERSION=1_49
      Sat Dec 22 08:08:26.729 [testsuite] _DEBUG build
      Sat Dec 22 08:08:26.729 [testsuite] random seed: 1356185306
      Sat Dec 22 08:08:26.729 [testsuite] going to run suite: ConfigUpgradeTests
      // ... snip ...
      Sat Dec 22 08:08:27.454 [testsuite] 	 going to run test: CollectionUpgrade
      Sat Dec 22 08:08:27.454 [testsuite] opening db:  config
      Sat Dec 22 08:08:27.454 [testsuite] dropDatabase config
      Sat Dec 22 08:08:27.454 [testsuite] opening db:  config
      Sat Dec 22 08:08:27.455 [FileAllocator] allocating new datafile /tmp/unittest/config.ns, filling with zeroes...
      Sat Dec 22 08:08:27.472 [FileAllocator] done allocating datafile /tmp/unittest/config.ns, size: 16MB,  took 0.017 secs
      Sat Dec 22 08:08:27.472 [FileAllocator] allocating new datafile /tmp/unittest/config.0, filling with zeroes...
      Sat Dec 22 08:08:27.488 [FileAllocator] done allocating datafile /tmp/unittest/config.0, size: 16MB,  took 0.016 secs
      Sat Dec 22 08:08:27.489 [testsuite] datafileheader::init initializing /tmp/unittest/config.0 n:0
      Sat Dec 22 08:08:27.492 [testsuite] build index config.test { _id: 1 }
      Sat Dec 22 08:08:27.494 [testsuite] build index done.  scanned 0 total records. 0.001 secs
      Sat Dec 22 08:08:27.495 [testsuite] CMD: drop config.test
      Sat Dec 22 08:08:27.498 [testsuite] build index config.version { _id: 1 }
      Sat Dec 22 08:08:27.499 [testsuite] build index done.  scanned 0 total records. 0 secs
      Sat Dec 22 08:08:27.499 [testsuite] build index config.collections { _id: 1 }
      Sat Dec 22 08:08:27.500 [testsuite] build index done.  scanned 0 total records. 0.001 secs
      Sat Dec 22 08:08:27.501 [testsuite] build index config.chunks { _id: 1 }
      Sat Dec 22 08:08:27.503 [testsuite] build index done.  scanned 0 total records. 0.001 secs
      Sat Dec 22 08:08:27.507 [testsuite] build index config.shards { _id: 1 }
      Sat Dec 22 08:08:27.508 [testsuite] build index done.  scanned 0 total records. 0.001 secs
      Sat Dec 22 08:08:27.510 [testsuite] build index config.mongos { _id: 1 }
      Sat Dec 22 08:08:27.511 [testsuite] build index done.  scanned 0 total records. 0.001 secs
      Sat Dec 22 08:08:27.565 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.566 [testsuite] build index config.locks { _id: 1 }
      Sat Dec 22 08:08:27.567 [testsuite] build index done.  scanned 0 total records. 0 secs
      Sat Dec 22 08:08:27.621 [testsuite] distributed lock 'configUpgrade/tp1.10gen.cc:27017:1356185306:924226673' acquired, ts : 50d5bedbb19ec242aa292d43
      Sat Dec 22 08:08:27.621 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.622 [testsuite] starting upgrade of config server from v3 to v4
      Sat Dec 22 08:08:27.622 [testsuite] starting next upgrade step from v3 to v4
      Sat Dec 22 08:08:27.622 [testsuite] about to log new metadata event: { _id: "tp1.10gen.cc-2012-12-22T14:08:27-50d5bedbb19ec242aa292d44", server: "tp1.10gen.cc", clientAddr: "N/A", time: new Date(1356185307622), what: "starting upgrade of config database", ns: "config.version", details: { from: 3, to: 4 } }
      Sat Dec 22 08:08:27.622 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.622 [testsuite] build index config.changelog { _id: 1 }
      Sat Dec 22 08:08:27.623 [testsuite] build index done.  scanned 0 total records. 0 secs
      Sat Dec 22 08:08:27.623 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.624 [testsuite] replacing connection to $dummyShard:10000 with localhost
      Sat Dec 22 08:08:27.625 [testsuite] replacing connection to $dummyShard:20000 with localhost
      Sat Dec 22 08:08:27.625 [testsuite] replacing connection to $dummyShard:30000 with localhost
      Sat Dec 22 08:08:27.626 [testsuite] replacing connection to $dummyShard:40000 with localhost
      Sat Dec 22 08:08:27.626 [testsuite] replacing connection to $dummyShard:50000 with localhost
      Sat Dec 22 08:08:27.627 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.628 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.684 [testsuite] distributed lock 'foo.barA/tp1.10gen.cc:27017:1356185306:924226673' acquired, ts : 50d5bedbb19ec242aa292d47
      Sat Dec 22 08:08:27.738 [testsuite] distributed lock 'foo.barB/tp1.10gen.cc:27017:1356185306:924226673' acquired, ts : 50d5bedbb19ec242aa292d48
      Sat Dec 22 08:08:27.738 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.739 [testsuite] build index config.collections-upgrade-50d5bedbb19ec242aa292d45 { _id: 1 }
      Sat Dec 22 08:08:27.740 [testsuite] build index done.  scanned 0 total records. 0.001 secs
      Sat Dec 22 08:08:27.742 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.743 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.743 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.749 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.751 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.752 [testsuite] build index config.collections-backup-50d5bedbb19ec242aa292d45 { _id: 1 }
      Sat Dec 22 08:08:27.753 [testsuite] build index done.  scanned 0 total records. 0 secs
      Sat Dec 22 08:08:27.754 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.755 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.755 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.757 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.759 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.760 [testsuite] build index config.chunks-upgrade-50d5bedbb19ec242aa292d45 { _id: 1 }
      Sat Dec 22 08:08:27.760 [testsuite] build index done.  scanned 0 total records. 0 secs
      Sat Dec 22 08:08:27.819 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.820 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.820 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.822 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.824 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.825 [testsuite] build index config.chunks-backup-50d5bedbb19ec242aa292d45 { _id: 1 }
      Sat Dec 22 08:08:27.826 [testsuite] build index done.  scanned 0 total records. 0 secs
      Sat Dec 22 08:08:27.883 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.885 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.885 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.887 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.890 [testsuite] checking epochs for foo.barA collection...
      Sat Dec 22 08:08:27.890 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.890 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.890 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.890 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.890 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.890 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.891 [testsuite] writing epoch 50d5bedbb19ec242aa292d2d for 5 chunks in foo.barA collection...
      Sat Dec 22 08:08:27.891 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.893 [testsuite] checking epochs for foo.barB collection...
      Sat Dec 22 08:08:27.893 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.893 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.893 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.893 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.893 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.893 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.893 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.893 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.893 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.894 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.894 [testsuite] can't load version from element type (0) EOO
      Sat Dec 22 08:08:27.894 [testsuite] writing new epoch 50d5bedbb19ec242aa292d49 for foo.barB collection...
      Sat Dec 22 08:08:27.894 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.894 [testsuite] writing epoch 50d5bedbb19ec242aa292d49 for 10 chunks in foo.barB collection...
      Sat Dec 22 08:08:27.894 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.897 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.898 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.899 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.956 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.956 [testsuite] opening db:  admin
      Sat Dec 22 08:08:27.961 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.965 [testsuite] writing new version info and clusterId 50d5bedbb19ec242aa292d4a...
      Sat Dec 22 08:08:27.965 [testsuite] replacing connection to $dummy:10000 with localhost
      found a constructor in the call tree: mongo::ScopedDistributedLock::~ScopedDistributedLock()
      _ZN5mongo21ScopedDistributedLockD0Ev
      Sat Dec 22 08:08:28.066 [testsuite]   Fatal Assertion 16236
      0x1890a71 0x186d53f 0x1859696 0xf4809c 0x16cf06a 0xe01fa2 0xe0a885 0x149c8ab 0x149bda5 0x160558c 0x16a556d 0x16b5c95 0x162bfba 0x162d4f4 0x15c8ac5 0x15c78fe 0x15cadb9 0x13fb022 0x13fae3b 0x14280b6 
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo15printStackTraceERSo+0x29) [0x1890a71]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo10logContextEPKc+0x5e) [0x186d53f]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo13fassertFailedEi+0x65) [0x1859696]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo7fassertEib+0x29) [0xf4809c]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZNK5mongo6Record10_accessingEv+0x11c) [0x16cf06a]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo6Record4dataEv+0x18) [0xe01fa2]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZNK5mongo7DiskLoc5btreeINS_12BtreeData_V1EEEPKNS_11BtreeBucketIT_EEv+0x87) [0xe0a885]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZNK5mongo15BtreeCursorImplINS_12BtreeData_V1EE11currKeyNodeEv+0x57) [0x149c8ab]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo15BtreeCursorImplINS_12BtreeData_V1EE7currLocEv+0x4b) [0x149bda5]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZNK5mongo19CoveredIndexMatcher14matchesCurrentEPNS_6CursorEPNS_12MatchDetailsE+0xe8) [0x160558c]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo15QueryPlanRunner14currentMatchesEPNS_12MatchDetailsE+0x113) [0x16a556d]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo24QueryOptimizerCursorImpl14currentMatchesEPNS_12MatchDetailsE+0x79) [0x16b5c95]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo14_updateObjectsEbPKcRKNS_7BSONObjES4_bbbRNS_7OpDebugEPNS_11RemoveSaverEbRKNS_24QueryPlanSelectionPolicyEb+0xe1f) [0x162bfba]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo13updateObjectsEPKcRKNS_7BSONObjES4_bbbRNS_7OpDebugEbRKNS_24QueryPlanSelectionPolicyE+0xcb) [0x162d4f4]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo14receivedUpdateERNS_7MessageERNS_5CurOpE+0x4e4) [0x15c8ac5]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0x63e) [0x15c78fe]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo14DBDirectClient3sayERNS_7MessageEbPSs+0x8d) [0x15cadb9]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo12DBClientBase6updateERKSsNS_5QueryENS_7BSONObjEi+0x18c) [0x13fb022]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo12DBClientBase6updateERKSsNS_5QueryENS_7BSONObjEbb+0x95) [0x13fae3b]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo15DistributedLock6unlockEPNS_7BSONObjE+0x964) [0x14280b6]
      Sat Dec 22 08:08:28.105 [testsuite] 
      
      ***aborting after fassert() failure
      
      Sat Dec 22 08:08:28.799 [interruptThread] now exiting
      Sat Dec 22 08:08:28.799 dbexit: 
      Sat Dec 22 08:08:28.799 [interruptThread] shutdown: going to close listening sockets...
      Sat Dec 22 08:08:28.799 [interruptThread] closing listening socket: 8
      Sat Dec 22 08:08:28.799 [interruptThread] closing listening socket: 9
      Sat Dec 22 08:08:28.799 [interruptThread] closing listening socket: 10
      Sat Dec 22 08:08:28.799 [interruptThread] removing socket file: /tmp/mongodb-27999.sock
      Sat Dec 22 08:08:28.799 [interruptThread] shutdown: going to flush diaglog...
      Sat Dec 22 08:08:28.799 [interruptThread] shutdown: going to close sockets...
      Sat Dec 22 08:08:28.799 [interruptThread] shutdown: waiting for fs preallocator...
      Sat Dec 22 08:08:28.799 [interruptThread] shutdown: closing all files...
      Sat Dec 22 08:08:28.799 [interruptThread] closeAllFiles() finished
      Sat Dec 22 08:08:28.800 [interruptThread] shutdown: removing fs lock...
      Sat Dec 22 08:08:28.800 dbexit: really exiting now
      

      Excerpt with Fatal Assertion:

      Sat Dec 22 08:08:27.956 [testsuite] opening db:  admin
      Sat Dec 22 08:08:27.961 [testsuite] replacing connection to $dummy:10000 with localhost
      Sat Dec 22 08:08:27.965 [testsuite] writing new version info and clusterId 50d5bedbb19ec242aa292d4a...
      Sat Dec 22 08:08:27.965 [testsuite] replacing connection to $dummy:10000 with localhost
      found a constructor in the call tree: mongo::ScopedDistributedLock::~ScopedDistributedLock()
      _ZN5mongo21ScopedDistributedLockD0Ev
      Sat Dec 22 08:08:28.066 [testsuite]   Fatal Assertion 16236
      0x1890a71 0x186d53f 0x1859696 0xf4809c 0x16cf06a 0xe01fa2 0xe0a885 0x149c8ab 0x149bda5 0x160558c 0x16a556d 0x16b5c95 0x162bfba 0x162d4f4 0x15c8ac5 0x15c78fe 0x15cadb9 0x13fb022 0x13fae3b 0x14280b6 
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo15printStackTraceERSo+0x29) [0x1890a71]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo10logContextEPKc+0x5e) [0x186d53f]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo13fassertFailedEi+0x65) [0x1859696]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo7fassertEib+0x29) [0xf4809c]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZNK5mongo6Record10_accessingEv+0x11c) [0x16cf06a]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo6Record4dataEv+0x18) [0xe01fa2]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZNK5mongo7DiskLoc5btreeINS_12BtreeData_V1EEEPKNS_11BtreeBucketIT_EEv+0x87) [0xe0a885]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZNK5mongo15BtreeCursorImplINS_12BtreeData_V1EE11currKeyNodeEv+0x57) [0x149c8ab]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo15BtreeCursorImplINS_12BtreeData_V1EE7currLocEv+0x4b) [0x149bda5]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZNK5mongo19CoveredIndexMatcher14matchesCurrentEPNS_6CursorEPNS_12MatchDetailsE+0xe8) [0x160558c]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo15QueryPlanRunner14currentMatchesEPNS_12MatchDetailsE+0x113) [0x16a556d]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo24QueryOptimizerCursorImpl14currentMatchesEPNS_12MatchDetailsE+0x79) [0x16b5c95]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo14_updateObjectsEbPKcRKNS_7BSONObjES4_bbbRNS_7OpDebugEPNS_11RemoveSaverEbRKNS_24QueryPlanSelectionPolicyEb+0xe1f) [0x162bfba]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo13updateObjectsEPKcRKNS_7BSONObjES4_bbbRNS_7OpDebugEbRKNS_24QueryPlanSelectionPolicyE+0xcb) [0x162d4f4]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo14receivedUpdateERNS_7MessageERNS_5CurOpE+0x4e4) [0x15c8ac5]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE+0x63e) [0x15c78fe]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo14DBDirectClient3sayERNS_7MessageEbPSs+0x8d) [0x15cadb9]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo12DBClientBase6updateERKSsNS_5QueryENS_7BSONObjEi+0x18c) [0x13fb022]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo12DBClientBase6updateERKSsNS_5QueryENS_7BSONObjEbb+0x95) [0x13fae3b]
       /home/yellow/buildslave/Linux_64bit_debug_dur_off/mongo/test(_ZN5mongo15DistributedLock6unlockEPNS_7BSONObjE+0x964) [0x14280b6]
      Sat Dec 22 08:08:28.105 [testsuite] 
      
      ***aborting after fassert() failure
      

            Assignee:
            Eliot Horowitz (Inactive)
            Reporter:
            Tad Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: