SERVER-8018: don't check ScopedDistributedLock for nwo