src/mongo/util/stack_introspect.cpp
@@ -65,6 +65,9 @@ namespace mongo {
             if ( name.find( "Tests" ) != string::npos )
                 return false;
             
+            if ( name.find( "ScopedDistributedLock" ) != string::npos )
+                return false;
+
             return method == clazz;
         }
         
